# StudyMate

./: .gitignore  README.md
apps/api/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/api/core/: __init__.py  config.py  dependencies.py  errors.py  middleware.py  rate_limit.py  security.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: .gitkeep  369f827eaf12_add_user_is_pro_and_token_usage_table.py  372dee4b2ff1_combined_auth_and_summaries.py  6081ef6675da_initial_schema.py  a1b2c3d4e5f6_add_major_and_user_activity.py  a1c3e5f7b9d1_add_daily_page_usage_counter.py  b2c4d6e8f0a1_add_daily_token_usage_counter.py  b3d5f7a9c1e3_add_suspension_presence_activity_events.py  b9d1f3a5c7e9_add_quiz_session_sources.py  c1e3f5a7b9d2_add_quiz_session_submitted_at.py  c3d5e7f9a1b3_add_user_role.py  d2f4a6b8c0e1_add_document_content_hash.py  d4e6f8a0b2c4_add_login_and_generation_metrics.py  e5f7a9c1d3b5_add_document_ingestion_status.py  f7a9c1d3b5e7_normalize_user_emails_lowercase.py
apps/api/models/: __init__.py  database.py  schemas.py
apps/api/routers/: __init__.py  admin.py  auth.py  chat.py  documents.py  history.py  leaderboard.py  quiz.py  stats.py  summary.py  usage.py
apps/api/scripts/: promote_admin.py  sample_test_doc.txt  upgrade_user.py  wipe_db.py
apps/api/services/: __init__.py  activity_service.py  auth_service.py  badges.py  embedder.py  generator.py  page_quota_service.py  pdf_processor.py  retriever.py  token_service.py  vector_store.py
claude/: StudyMate_Stitch_Prompts_v2.md  report_text.txt  (+1 more)
(+96 files in other folders)
