[project]
name = "studymate-api"
version = "1.0.0"
description = "StudyMate backend — RAG-powered study companion"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
    "B",   # flake8-bugbear (common bugs)
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
